# ChangeLog of Nadoka($Rev$)
# $Id$ 
#


2004-07-17(Sat) 00:06:54 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix char code bugs

	* ndk_manager.rb : trap SIGINT to quit program

	* ndk_client.rb : add exception hook to protect unexpected
	disconnect


2004-07-14(Wed) 04:29:47 +0900  Koichi Sasada  <ko1@atdot.net>

	* ToDo : removed

	* README : fix url


2004-07-14(Wed) 04:27:53 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix exception handling


2004-07-14(Wed) 04:03:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : add DefaultBotFiles

	* ndk_config.rb : ch_config(ch, key) is added

	* ndk_config.rb(make_bot_instance) : logging message to bot_state

	* ndk_manager.rb : fix error recovery process(set @connected to false)

	* plugins/backlogbot.nb : fix some bugs
	(user to user messages and so on)

	* plugins/weba.nb : fix configuration example's bug


2004-07-12(Mon) 16:51:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : add rev to version string if this in trunk


2004-07-12(Mon) 16:39:59 +0900  Koichi Sasada  <ko1@atdot.net>

	* ChangeLog : add rev keyword


2004-07-11(Sun) 11:37:14 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fix schemes


2004-07-10(Sat) 22:48:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix filenameencoding bugs

	* ndk_logger.rb : fix user to user message's logname


2004-07-10(Sat) 21:22:18 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : ignore NOTICE messages when logged in

	* plugins/backlogbot.rb : ignore non channel messages


2004-07-10(Sat) 17:33:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : check trunk

	* ndk_bot.rb : add on_quit_from_channel event

	* plugins/backlogbot.nb: added


2004-07-09(Fri) 07:45:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/drbot.nb : rename method name kick_* -> send/recv...


2004-07-09(Fri) 03:52:01 +0900  Koichi Sasada  <ko1@atdot.net>
